<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#dddddd"
              android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:fitsSystemWindows="true"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <TextView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="center_vertical"
                android:text="@string/doodle_cancel"
                android:textColor="#000000"
                android:textSize="16dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/doodle_select_image"
                android:textColor="@android:color/black"
                android:textSize="18dp"
                android:textStyle="normal"
                />

            <TextView
                android:id="@+id/btn_enter"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/doodle_enter"
                android:textColor="@android:color/black"
                android:textSize="16dp"
                android:textStyle="normal"
                android:visibility="visible"
                />
        </RelativeLayout>
    </RelativeLayout>

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#aaaaaa"/>

    <GridView
        android:id="@+id/doodle_list_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:cacheColorHint="@android:color/transparent"
        android:horizontalSpacing="1dp"
        android:listSelector="@android:color/transparent"
        android:numColumns="3"
        android:verticalSpacing="1dp"/>
</LinearLayout>