<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#232323"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <include
            android:id="@+id/doodle_title_bar"
            layout="@layout/doodle_title_bar" />

        <FrameLayout
            android:id="@+id/doodle_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/doodle_title_bar" />

        <RelativeLayout
            android:id="@+id/doodle_panel"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_below="@id/doodle_title_bar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:orientation="vertical">
                <HorizontalScrollView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_pen_hand"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:scaleType="centerCrop"
                            android:text="手绘"
                            android:textColor="#000000"
                            android:textSize="13dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_pen_copy"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:scaleType="centerCrop"
                            android:text="仿制"
                            android:textColor="#000000"
                            android:textSize="13dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_pen_eraser"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"

                            android:scaleType="centerCrop"
                            android:text="橡皮擦"
                            android:textColor="#000000"
                            android:textSize="13dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_pen_text"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:scaleType="centerCrop"
                            android:text="文字"
                            android:textColor="#000000"
                            android:textSize="13dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_pen_bitmap"
                            android:layout_width="50dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:scaleType="centerCrop"
                            android:text="贴图"
                            android:textColor="#000000"
                            android:textSize="13dp"
                            android:visibility="visible" />

                        <FrameLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:minWidth="10dp" />

                        <Button
                            android:id="@+id/btn_clear"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:text="清屏"
                            android:textColor="#000000"
                            android:textSize="13dp" />

                        <Button
                            android:id="@+id/btn_undo"
                            android:layout_width="40dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_round"
                            android:text="撤销"
                            android:textColor="#000000"
                            android:textSize="13dp" />
                    </LinearLayout>

                </HorizontalScrollView>
                <HorizontalScrollView
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="none">

                    <LinearLayout
                        android:id="@+id/bar_shape_mode"
                        android:layout_width="fill_parent"
                        android:layout_height="30dp"
                        android:layout_centerHorizontal="true"
                        android:orientation="horizontal"
                        android:visibility="visible">

                        <Button
                            android:id="@+id/btn_hand_write"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"
                            android:text="手绘"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_arrow"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"

                            android:text="箭头"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_line"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"

                            android:text="直线"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_holl_circle"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"

                            android:scaleType="centerCrop"
                            android:text="空心圆"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_fill_circle"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"

                            android:scaleType="centerCrop"
                            android:text="实心圆"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_holl_rect"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"
                            android:scaleType="centerCrop"
                            android:text="空心矩形"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />

                        <Button
                            android:id="@+id/btn_fill_rect"
                            android:layout_width="45dp"
                            android:layout_height="match_parent"
                            android:background="@drawable/doodle_btn_effect_rect_line"

                            android:scaleType="centerCrop"
                            android:text="实心矩形"
                            android:textColor="#000000"
                            android:textSize="10dp"
                            android:visibility="visible" />
                    </LinearLayout>
                </HorizontalScrollView>
                <LinearLayout
                    android:id="@+id/doodle_color_container"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <FrameLayout
                        android:id="@+id/btn_set_color_container"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/doodle_btn_effect_rect_line"
                        android:padding="2dp">

                        <ImageView
                            android:id="@+id/btn_set_color"
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent" />
                    </FrameLayout>

                    <SeekBar
                        android:id="@+id/paint_size"
                        android:layout_width="260dp"
                        android:layout_height="33dp"
                        android:max="100"
                        android:maxHeight="33dp"
                        android:minHeight="33dp"
                        android:paddingLeft="12dp"
                        android:paddingRight="10dp"
                        android:progressDrawable="@drawable/doodle_seekbar_bg"
                        android:thumb="@drawable/doodle_thumb_seekbarr"
                        android:thumbOffset="0dp" />

                    <TextView
                        android:id="@+id/paint_size_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="2dp"
                        android:minWidth="40dp"
                        android:text=""
                        android:textColor="#ffffff"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/doodle_selectable_edit_container"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/title_bar_height"
                android:layout_alignParentBottom="true"
                android:background="#88000000"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/doodle_selectable_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/doodle_btn_effect_rect_pressed_black"
                    android:gravity="center"
                    android:text="@string/doodle_edit"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/doodle_selectable_bottom"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/doodle_btn_effect_rect_pressed_black"
                    android:gravity="center"
                    android:text="@string/doodle_bottom"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/doodle_selectable_top"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/doodle_btn_effect_rect_pressed_black"
                    android:gravity="center"
                    android:text="@string/doodle_top"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />

                <TextView
                    android:id="@+id/doodle_selectable_remove"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/doodle_btn_effect_rect_pressed_black"
                    android:gravity="center"
                    android:text="@string/doodle_remove"
                    android:textColor="#ffffff"
                    android:textSize="16dp" />
            </LinearLayout>
        </RelativeLayout>


    </RelativeLayout>
</FrameLayout>